[package]
name = "syntaxext_lint"
version = "0.1.6"
authors = ["Matt Coffin <mcoffin13@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/mcoffin/syntaxext_lint"
homepage = "http://github.com/mcoffin/syntaxext_lint"
description = """
Common lints for creating syntax extensions
"""

[lib]
name = "syntaxext_lint"
plugin = true
